--- a/style.css
+++ b/style.css
@@ -74,23 +74,19 @@ body, html {
 }
 
 
-#leaderboard {
-    margin-top: 20px;
+#scoreSubmission input, #scoreSubmission button {
+    margin: 5px;
+    padding: 10px;
 }
 
-#leaderboard h3 {
-    margin-bottom: 10px;
-}
-
-#leaderboardList {
+#leaderboard ul {
     list-style-type: none;
     padding: 0;
-    margin: 0;
 }
 
-#leaderboardList li {
-    border-bottom: 1px solid #ddd;
-    padding: 5px;
+#leaderboard li {
+    margin: 5px 0;
 }
+
 
 
